testcases/phase2/check13blsv-struct.rc
structdef STRUCT {

	int x;
	int x;		//x already declared
	bool y, x;		//x already declared
	float z, y, x;		//x,y already declared
	function: void foo(){}	//ok
	function: float foo(){return 0;}			//foo already declared
	function: void foo(int a){}		//foo already declared
	function: void x(){}		//x already declared
	
};


structdef RECURSIVESTRUCT{

	RECURSIVESTRUCT myRecursiveStruct;		//error
	RECURSIVESTRUCT* myRecursiveStruct2;		//no error
};

function: void foo(){}		//no error
int y;		//no error


